# rserial

./: Cargo.toml  abstraction.rs  justfile  notes.md  test.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: app.rs  main.rs  main2.rs  main3.rs  serial.rs  ui.rs
src/backend/: file.rs  mod.rs  serial.rs
src/frontend/: mod.rs  tui.rs
